--- a/style4.css
+++ b/style4.css
@@ -1,1 +1,31 @@
-
+body{
+  background-color: #edede9;
+}
+h1{
+   color: #27187E;
+   font-size:70px;
+   font-family: "Copperplate", Fantasy;
+   text-shadow: 3px 3px 6px #FF8600;
+   text-align: center;
+}
+p{
+  color:#27187E;
+  font-size: 50px;
+  font-family: "Copperplate", Fantasy;
+  
+}
+img{
+  width:1000px;
+}
+h2{
+  color:#6c757d;
+  font-size: 20px;
+  font-family: "Verdana", Sans-serif;
+  margin-right: 400px;
+  margin-left: 400px;
+}
+ul{
+  list-style-type:none;
+  text-align: center;
+  font-size: 20px;
+}
